VTK-3277 - fix magicline jump (caused by magicline becoming first-child and adding margin removed from next first-child)

--- a/src/main/resources/web/themes/default/fck_editorarea.css
+++ b/src/main/resources/web/themes/default/fck_editorarea.css
@@ -13,11 +13,7 @@ body {
   background-color: #fff;
 
   /* USIT: Make sure it stays the same in all browsers */
-  margin: 10px;
-}
-
-body > *:first-child {
-  margin-top: 0px;
+  margin: 12px;
 }
 
 /* USIT - font */
